tests/integration/commands/validate/02_missing_xml_doctype_declaration/test.itest
RUN: %reqif validate %S/sample.reqif | filecheck %s --dump-input=fail

CHECK: warning: semantic error: Document is missing a valid XML declaration.
CHECK: Validation complete with 0 errors, 0 schema issues found, 1 semantic issues found.
